重新组织文件结构

--- a/src/server/ui/servermainwindow.ui
+++ b/src/server/ui/servermainwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>ServerMainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <widget class="QMainWindow" name="ServerMainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -16,7 +16,7 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_3">
     <item>
-     <widget class="QLabel" name="label_3">
+     <widget class="QLabel" name="title">
       <property name="text">
        <string>Server Operator</string>
       </property>
@@ -29,20 +29,27 @@
      <widget class="QWidget" name="server" native="true">
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QWidget" name="widget" native="true">
+        <widget class="QWidget" name="port_widget" native="true">
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
-           <widget class="QLabel" name="label_2">
+           <widget class="QLabel" name="prot_label">
             <property name="text">
              <string>Port:</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="lineEdit"/>
+           <widget class="QLineEdit" name="port_lineedit">
+            <property name="inputMask">
+             <string notr="true"/>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignmentFlag::AlignCenter</set>
+            </property>
+           </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton_2">
+           <widget class="QPushButton" name="start_server_button">
             <property name="text">
              <string>Start Listen</string>
             </property>
@@ -62,7 +69,7 @@
         <widget class="QWidget" name="clientlist" native="true">
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
-           <widget class="QLabel" name="label">
+           <widget class="QLabel" name="clients_label">
             <property name="text">
              <string>Connected Clients</string>
             </property>
